--- a/FinalProjectUAS/app/src/main/AndroidManifest.xml
+++ b/FinalProjectUAS/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".hp.HPActivity"></activity>
+        <activity android:name=".laptop.LaptopActivity"></activity>
+        <activity android:name=".hp.HPActivity" />
         <activity android:name=".laptop.MainLaptopActivity" />
         <activity android:name=".hp.MainHpActivity" />
         <activity android:name=".MainActivity">
